use semsntic css classes in html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,11 @@
 <form class="ui large form segment">
-  2 <h3 class="ui header">Add a Link</h3>
-  3 4
+  <h3 class="ui header">Add a Link</h3>
   <div class="field">
-  5 <label for="title">Title:</label>
-  6 <input name="title" id="title">
-  7 </div>
-  8 <div class="field">
-  9 <label for="link">Link:</label>
-  10 <input name="link" id="link">
-  11 </div>
-  12 </form>
+    <label for="title">Title:</label>
+    <input name="title" id="title">
+  </div>
+  <div class="field">
+    <label for="link">Link:</label>
+    <input name="link" id="link">
+  </div>
+</form>
