--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <input name="title" id="title" #newtitle>
   </div>
   <div class="field">
-    <label for="link">Link:</label>
+    <label for="linkk">Link:</label>
     <input name="link" id="link" #newlink>
   </div>
   <button (click)="addArticle(newtitle, newlink)"
